--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
-        "jquery": "^3.7.0"
+        "jquery": "^3.7.0",
+        "jquery-validation": "^1.19.5"
     }
 }
